# flask_to_do_list

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
website/: __init__.py  auth.py  models.py  views.py
website/static/css/: styles.css
website/templates/: base.html  index.html  login.html  signup.html  update.html
website/templates/partials/: _navbar.html
