[tool.poetry]
name = "flask_to_do_list"
version = "0.1.0"
description = ""
authors = ["Vaylon Fernandes"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.6.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
